setMyUserName completed
a lot of work... help!
