# service/api/api-handler.go
@@ -9,7 +9,12 @@ func (rt *_router) Handler() http.Handler {
 	// Register routes
 
 	// Login endpoint
+	// All operations related to users logging in.
 	rt.router.POST("/session", rt.wrap(rt.doLogin))
+
+	// User endpoint
+	// All operations realated to users managing their own profile.
+	rt.router.PUT("/users/:uid/username", rt.wrap(rt.setMyUserName))
 
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
